# study01

study-app-front/: README.md  angular.json  buildspec.yml  package-lock.json  package.json
study-app-front/src/: index.html
study-app-front/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
study-app-front/src/environments/: environment.local.ts  environment.prod.ts  environment.ts
study-app-server/: buildspec-fastapi.yml  buildspec-pre-deploy.yml  docker-compose.deploy-fastapi.yml  docker-compose.yml
study-app-server/fastapi/: Dockerfile
study-app-server/fastapi/app/: alembic.ini  api_service.py  constants.py  db.py  main.py  pyproject.toml
study-app-server/fastapi/app/migrations/: env.py
study-app-server/fastapi/app/migrations/versions/: 2023_11_06_0238-5c1f2a49cdf2_first_migration.py
study-app-server/fastapi/app/models/: model_base.py  models.py
study-app-server/scripts/: run_command_on_ecs.py
study-app-server/scripts/fastapi/: Dockerfile  build_fastapi.sh
study-app-server/scripts/fastapi/uvicorn-gunicorn-docker/: gunicorn_conf.py  requirements.txt  start-reload.sh  start.sh
