[tool.poetry]
authors = ["Hirokazu Mori"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.8.4"
aiomysql = "0.2.0"
alembic = "^1.11.1"
anyio = "^3.7.0"
asgi-correlation-id = "^4.1.0"
beautifulsoup4 = "^4.2.0"
boto3 = "^1.26.151"
bump-pydantic = "^0.1.0"
coloredlogs = "^15.0.1"
fastapi = {extras = ["all"], version = "^0.100.0"}
mysqlclient = "^2.1.0"
pandas = "^2.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python = ">=3.11,<3.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytz = "^2023.3"
requests = "^2.28.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.30.0"}
sqlalchemy = "^2.0.16"
tenacity = "^8.2.2"
websockets = "^11.0.1"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
factory-boy = "^3.2.1"
httpx = "^0.23.0"
isort = "5.12.0"
locust = "^2.11.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.7.0"
types-python-dateutil = "^2.8.15"
types-pytz = "2021.3.8"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests",
]

[tool.pyright]
exclude = [
  "**/tests",
  "**/migrations",
  "**/__pycache__",
  "locustfile.py",
]
pythonPlatform = "All"
pythonVersion = "3.11"
reportAssertAlwaysTrue = true
reportConstantRedefinition = true
reportDuplicateImport = true
reportImportCycles = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportMissingImports = true
reportMissingParameterType = true
reportMissingSuperCall = true
reportMissingTypeStubs = false
reportOverlappingOverload = true
reportPrivateUsage = true
reportUnnecessaryCast = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true
reportUnusedClass = true
reportUnusedExpression = true
reportUnusedFunction = true
reportUnusedVariable = true
stubPath = ""
typeCheckingMode = 'basic'
useLibraryCodeForTypes = true
venv = "amidala-fastapi"

[tool.isort]
line_length = 120
profile = "black"
skip_glob = ["tests/*"]
